Issue #2927834 by jwilson3: Section content not centered w/ BG Image Parallax

--- a/css/theme.css
+++ b/css/theme.css
@@ -8,3 +8,9 @@
 .section.help {
   padding: 0 0 1.6em;
 }
+
+.bg-image.parallax {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
